# Marker_MCP_Server

./: .gitignore  README.md  REORGANIZATION_SUMMARY.md  SURYA_FIX_SUMMARY.md  example_mcp_client.py  marker_launcher.py  mcp-config-example.json  pyproject.toml  pytest.ini  unified_conversion.py  unified_monitoring.py
config_fixes/: optimized_commands.sh  optimized_config.json  optimized_config.py  optimized_gemini_service.py  optimized_table_processor.py  troubleshooting_guide.md
examples/: basic_batch_pages_config.json  basic_config.json  claude_desktop_config_example.json  debug_config.json  enhanced_conversion_example.py  example_batch_pages.py  llm_enhanced_config.json  nvidia_config.json  nvidia_usage_example.py  performance_config.json
marker/: __init__.py  mcp_server.py  models.py  output.py  server.py  settings.py  util.py
marker/builders/: document.py  layout.py  line.py  llm_layout.py  ocr.py  structure.py
marker/config/: parser.py  printer.py
marker/converters/: __init__.py  enhanced_pdf.py  extraction.py  ocr.py  pdf.py  registry.py  table.py
marker/extractors/: __init__.py  page.py
marker/processors/: __init__.py  enhanced_caption_detector.py  enhanced_heading_detector.py  registry.py  table.py
marker/processors/llm/: llm_layout_refinement.py  llm_mathblock.py  llm_meta.py
marker/providers/: __init__.py  document.py  epub.py  html.py  image.py  pdf.py  registry.py
marker/renderers/: extraction.py  markdown.py
marker/schema/: document.py
marker/schema/blocks/: base.py
marker/schema/groups/: page.py
marker/schema/text/: line.py
marker/scripts/: common.py  extraction_app.py  file_to_s3.py  server.py  streamlit_app.py
marker/services/: __init__.py  claude.py  gemini.py  groq.py  nvidia.py  ollama.py  openai.py  vertex.py
monitoring/: metrics.db
output_markdown/Agentic_AI/: Agentic_AI.md  Agentic_AI_meta.json
output_markdown/Forecast/: Forecast.md  Forecast_meta.json
src/marker_mcp_server/: __init__.py  __main__.py  batch_optimizer.py  config.py  config_schema.py  dashboard.py  gpu_optimizer.py  integrated_server.py  memory_manager.py  monitoring.py  resources.py  security.py  server.py  tools.py  utils.py  webapi.py
src/marker_mcp_server/static/: dashboard.js
src/marker_mcp_server/templates/: index.html
src/marker_mcp_server/webui/: package-lock.json  package.json
src/marker_mcp_server/webui/public/: index.html
src/marker_mcp_server/webui/src/: App.js
src/marker_mcp_server/webui/src/components/: Layout.js
src/marker_mcp_server/webui/src/pages/: ConfigPage.js  ConvertPage.js  Dashboard.js  JobsPage.js  MonitoringPage.js
src/marker_mcp_server/webui/src/utils/: api.js
tests/: conftest.py  test_config.py  test_pdf_conversion.py  test_tools.py  utils.py
tests/services/: test_groq_service.py
