[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marker-mcp-server"
version = "1.0.0"
description = "A flexible Marker PDF conversion service with MCP protocol support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "mcp>=1.9.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "Pillow>=10.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0"
]
dev = [
    "black>=23.3.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=marker_mcp_server"

[project.scripts]
marker-mcp-server = "marker_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marker_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
